History of this buildout
========================

6.0.0 (unreleased)
------------------

- Fix image rendering of Recent Documents on theme_list page.
  [jladage]

- Fix html of facet previews. [jladage]

- Integrate Hearing detail view and refactored foto migration.
  [jladage]

- Integrate MREvent detail view and migrate foto field to
  ImageAttachement. [jladage]

- Integrated Themes list, with current theme highlighted.
  [jladage]

- Refactor out getToolByName. [jladage]

- refactor method names to as_it_should().

- Custom prevnext implementation which browsers between items within
  a theme and between similar content types.
  [jladage] 

- Integrate year archive box for Advisory.  [jladage]

- Integrated Nexprev box for Advisory.  [jadage]

- Added ImageAttachments to Advisory to support multiple images
  to be added.  [jladage]

- Migrate the foto field to an ImageAttachment for each Advisory.
  [jladage]

- Removed Email actions from Advisory.  [jladage]

- Uninstall Classic Theme.  [jladage]

- Removed folder "Persberichten".  [jladage]

- Reindex Date indexes to prevent POSKeyErrors.  [jladage]

- Configure Documenten faceted navigation.  [jladage]

- Add theme titles to homepage agenda items if inside a theme.
  [jladage]

- Add index getThemeTitle and define it on theme, wow acquisition
  will take care of indexing all children.  [jladage]

- Added next meeting (hearing CT) logic with support for multiple
  planned hearings. [jladage]

- Updated json-ld info and removed twitter from social channels in
  footer. [jladage]

- Added nodejs.cfg and package.json from Zest website.  [maurits]

- Add faceted navigation notes.
- Fix column width (homepage had gap between 2nd and 3rd column)
- Remove faceted nav year (range) widget
- Indent homepage.pt
- Update faceted faceted criteria
  [coen]

- Remove top pagination form facetednavigation
  [coen]

- Disable theme jquery. Use Plone jquery only.
  [coen]

- Diazo rules and styling of plone edit forms.